# store_django

./: pyproject.toml
store/products/templates/products/: index.html  products.html
store/store/: settings.py
store/templates/: base.html
