[tool.poetry]
name = "store-django"
version = "0.1.0"
description = ""
authors = ["darkwolf <darkwolf1990janary@gmail.com>"]
readme = "README.md"
packages = [{include = "store_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
